--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Мой сайт</title>
     <link rel="stylesheet" href="style.css"> 
     <meta property="og:title" content="Заголовок"/>
-    <meta property="og:image" content="/img/fon.png"/>
+    <meta property="og:image" content="img/fon.png"/>
     <meta property="og:description" content="Описание сайта"/>
 </head>
     
@@ -15,7 +15,7 @@
   <div class="header">
     <div class="header__info">
         <div class="header__logo">
-            <img src="/img/logo.png" alt="логотип">
+            <img src="img/logo.png" alt="логотип">
         </div>
         <div class="header__right">
             <div class="header__contact">
@@ -39,7 +39,7 @@
         <a href="#">География поставок</a>
         <a href="#">Контакты</a>
         <div class="header__call-me">
-            <img src="/img/phone 1.png" alt="">
+            <img src="img/phone 1.png" alt="">
             <a href="#">Перезвоните мне</a>
         </div>
     </div>
@@ -49,7 +49,7 @@
         <h1>Российский завод силовых машин</h1>
         <p>научно-производственное предприятие, занимающееся разработкой и производством силовых машин.</p>
     </div>
-    <img src="/img/fon.png" alt="">
+    <img src="img/fon.png" alt="">
   </div> 
   <div class="info-block">
     <h2>О предприятии</h2>
