--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Мой сайт</title>
     <link rel="stylesheet" href="style.css"> 
     <meta property="og:title" content="Заголовок"/>
-    <meta property="og:image" content="img/fon.png"/>
+    <meta property="og:image" content="img/logo.png"/>
     <meta property="og:description" content="Описание сайта"/>
 </head>
     
